--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,20 @@ code {
 main {
     min-height: 80vh;
 }
+
+h1{
+    font-size: 1.8rem;
+    padding: 1rem 0;
+    margin-top: 1rem;
+    text-align: center;
+}
+h2{
+    font-size: 1.4rem;
+    padding: 0.5rem 0;
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.btn{
+    width: 100%;
+}
